Updated with copyright free photos.

--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
               <a class="a-desc-1" href="#zagreb">Zagreb</a>
             </div>
             <div class="col-gall-1 col-md-5">
-              <img class="image" src="images/Pula-Arena_.jpg" alt="pula-img">
+              <img class="image" src="images/MyPula_.jpg" alt="pula-img">
               Pula
             </div>
           </div>
           <div class="row justify-content-sm-center justify-content-lg-start">
             <div class="col-gall-1 col-md-5">
-              <img class="image" src="images/Split-Dioklecijan_.jpg" alt="split-img">
+              <img class="image" src="images/MySplit_.jpg" alt="split-img">
               <a class="a-desc-1" href="dalmatia.html">Split</a>
             </div>
             <div class="col-gall-1 col-md-5">
-              <img class="image" src="images/Trakoscan_.jpg" alt="trakoscan-img">
+              <img class="image" src="images/myTrakoscan_.jpg" alt="trakoscan-img">
               Trakošćan
             </div>
           </div>
@@ -97,21 +97,21 @@
         <div class="col-lg-6">
           <div class="row justify-content-sm-center justify-content-lg-start">
             <div class="col-gall-1 col-md-5">
-              <img class="image" src="images/Plitvice1_.jpg" alt="plitvice-img">
+              <img class="image" src="images/myPlitvice_.jpg" alt="plitvice-img">
               <a class="a-desc-1" href="dalmatia.html">Plitvice Lakes</a>
             </div>
             <div class="col-gall-1 col-md-5">
-              <img class="image" src="images/Zadar-Poluotok_.jpg" alt="zadar-img">
+              <img class="image" src="images/myZadar-Donat_.jpg" alt="zadar-img">
               <a class="a-desc-1" href="dalmatia.html">Zadar</a>
             </div>
           </div>
           <div class="row justify-content-sm-center justify-content-lg-start">
             <div class="col-gall-1 col-md-5">
-              <img class="image" src="images/Dubrovnik_.jpg" alt="dubrovnik-img">
+              <img class="image" src="images/MyDubrovnik_.jpg" alt="dubrovnik-img">
               <a class="a-desc-1" href="dalmatia.html">Dubrovnik</a>
             </div>
             <div class="col-gall-1 col-md-5">
-              <img class="image" src="images/Rastoke1_.jpg" alt="rastoke-img">
+              <img class="image" src="images/myRastoke_.jpg" alt="rastoke-img">
               <a class="a-desc-1" href="dalmatia.html">Rastoke</a>
             </div>
           </div>
