--- a/pricing.html
+++ b/pricing.html
@@ -58,9 +58,9 @@
 
       <!-- Table -->
 
-      <div class="row justify-content-between">
+      <div class="row">
 
-        <div class="col-md-6 col-lg-5">
+        <div class="col-md-6">
           <table class="table1">
             <thead>
               <tr>
@@ -76,9 +76,9 @@
                 <td>150 / hr</td>
               </tr>
               <tr>
-                <td><b>Pula</b></td>
-                <td>300</td>
-                <td>2.250</td>
+                <td><b>Trakošćan</b></td>
+                <td>100</td>
+                <td>750</td>
               </tr>
               <tr>
                 <td><b>Rijeka</b></td>
@@ -86,19 +86,9 @@
                 <td>1.350</td>
               </tr>
               <tr>
-                <td><b>Trakošćan</b></td>
-                <td>100</td>
-                <td>750</td>
-              </tr>
-              <tr>
-                <td><b>Paklenica</b></td>
-                <td>320</td>
-                <td>2.400</td>
-              </tr>
-              <tr>
-                <td><b>Krka</b></td>
-                <td>380</td>
-                <td>2.850</td>
+                <td><b>Pula</b></td>
+                <td>300</td>
+                <td>2.250</td>
               </tr>
               <tr>
                 <td><b>Rastoke **</b></td>
@@ -110,34 +100,25 @@
                 <td>170</td>
                 <td>1.275</td>
               </tr>
-            </tbody>
-          </table>
-        </div>
-
-        <div class="col-md-6 col-lg-5">
-          <table class="table1">
-            <thead>
-              <tr>
-                <th>Destination</th>
-                <th>€</td>
-                <th>HRK</td>
-              </tr>
-            </thead>
-            <tbody>
               <tr>
                 <td><b>Viewpoint ***</b></td>
                 <td>15</td>
                 <td>115</td>
               </tr>
               <tr>
-                <td><b>Waiting</b></td>
-                <td>15 / hr</td>
-                <td>115 / hr</td>
+                <td><b>Paklenica</b></td>
+                <td>320</td>
+                <td>2.400</td>
               </tr>
               <tr>
                 <td><b>Zadar</b></td>
                 <td>330</td>
                 <td>2.475</td>
+              </tr>
+              <tr>
+                <td><b>Krka</b></td>
+                <td>380</td>
+                <td>2.850</td>
               </tr>
               <tr>
                 <td><b>Šibenik</b></td>
@@ -154,6 +135,11 @@
                 <td>660</td>
                 <td>4.950</td>
               </tr>
+              <tr>
+                <td><b>Waiting</b></td>
+                <td>15 / hr</td>
+                <td>115 / hr</td>
+              </tr>
             </tbody>
             <tfoot>
               <tr>
@@ -164,6 +150,10 @@
               </tr>
             </tfoot>
           </table>
+        </div>
+
+        <div class="col-md-6">
+
         </div>
 
       </div>
@@ -186,7 +176,7 @@
               <a class="a-desc" href="dalmatia.html">Plitvice Lakes</a>
             </div>
             <div class="col-gall-1 col-md-5">
-              <img class="image" src="images/Zadar-Poluotok_.jpg" alt="zadar-img">
+              <img class="image" src="images/myZadar-Donat_.jpg" alt="zadar-img">
               <a class="a-desc" href="dalmatia.html">Zadar</a>
             </div>
           </div>
