--- a/dalmatia.html
+++ b/dalmatia.html
@@ -67,21 +67,21 @@
         <div class="col-lg-6">
           <div class="row justify-content-sm-center justify-content-lg-start">
             <div class="col-gall-2 col-md-5">
-              <img class="image" src="images/Zadar-Poluotok_.jpg" alt="zadar-img">
-              Zadar
+              <img class="image" src="images/myDalmacija_.jpg" alt="dalmacija-img">
+              Dalmatia
             </div>
             <div class="col-gall-2 col-md-5">
-              <img class="image" src="images/Sibenik-Katedrala_.jpg" alt="sibenik-img">
-              Šibenik
+              <img class="image" src="images/myZadar-Donat_.jpg" alt="zadar-img">
+              Zadar
             </div>
           </div>
           <div class="row justify-content-sm-center justify-content-lg-start">
             <div class="col-gall-2 col-md-5">
-              <img class="image" src="images/Split-Dioklecijan_.jpg" alt="split-img">
+              <img class="image" src="images/MySplit_.jpg" alt="split-img">
               Split
             </div>
             <div class="col-gall-2 col-md-5">
-              <img class="image" src="images/Dubrovnik_.jpg" alt="dubrovnik-img">
+              <img class="image" src="images/MyDubrovnik_.jpg" alt="dubrovnik-img">
               Dubrovnik
             </div>
           </div>
@@ -95,21 +95,21 @@
         <div class="col-lg-6">
           <div class="row justify-content-sm-center justify-content-lg-start">
             <div class="col-gall-2 col-md-5">
-              <img class="image" src="images/Plitvice1_.jpg" alt="plitvice-img">
+              <img class="image" src="images/myPlitvice_.jpg" alt="plitvice-img">
               <a class="a-desc-2" href="#options">Plitvice Lakes</a>
             </div>
             <div class="col-gall-2 col-md-5">
-              <img class="image" src="images/Rastoke1_.jpg" alt="rastoke-img">
+              <img class="image" src="images/myRastoke_.jpg" alt="rastoke-img">
               <a class="a-desc-2" href="#options">Rastoke</a>
             </div>
           </div>
           <div class="row justify-content-sm-center justify-content-lg-start">
             <div class="col-gall-2 col-md-5">
-              <img class="image" src="images/Paklenica2_.jpg" alt="paklenica-img">
+              <img class="image" src="images/myPaklenica_.jpg" alt="paklenica-img">
               <a class="a-desc-2" href="#options">Paklenica</a>
             </div>
             <div class="col-gall-2 col-md-5">
-              <img class="image" src="images/Krka-Visovac_.jpg" alt="krka-img">
+              <img class="image" src="images/MyKrka_.jpg" alt="krka-img">
               <a class="a-desc-2" href="#options">Krka</a>
             </div>
           </div>
@@ -164,19 +164,19 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <h4>Plitvice Lakes. 2 hrs away from Zagreb. Most famous destination world wide. Explore on your way to Dalmatia or take a return trip.</h4>
-          <img class="options-image" src="images/Plitvice1_.jpg" alt="plitvice-img">
+          <img class="options-image" src="images/myPlitvice_.jpg" alt="plitvice-img">
         </div>
         <div class="carousel-item">
           <h4>Rastoke, Slunj. Houses were built as water mills. Only 1.5 hours away from Zagreb. Explore on your way to Dalmatia, or take a return trip.</h4>
-          <img class="options-image" src="images/Rastoke1_.jpg" alt="rastoke-img">
+          <img class="options-image" src="images/myRastoke_.jpg" alt="rastoke-img">
         </div>
         <div class="carousel-item">
           <h4>NP Krka. Similar to Plitvice Lakes. Inside much warmer climate region. Swimming is allowed here! Only 3 hours away from Zagreb.</h4>
-          <img class="options-image" src="images/Krka-Visovac_.jpg" alt="krka-img">
+          <img class="options-image" src="images/MyKrka_.jpg" alt="krka-img">
         </div>
         <div class="carousel-item">
           <h4>NP Paklenica. Combines two climate regions: adriatic & continental. As you climb up, it gets cooler on a hot summer day!</h4>
-          <img class="options-image" src="images/Paklenica2_.jpg" alt="paklenica-img">
+          <img class="options-image" src="images/myPaklenica_.jpg" alt="paklenica-img">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#intro-carousel" data-bs-slide="prev">
