Finished by applying HTML CSS Bootstrap
last version before publishing @domain.

--- a/dalmatia.html
+++ b/dalmatia.html
@@ -23,46 +23,56 @@
 
 <body>
 
+  <!-- Navbar Section -->
+
+  <nav class="navbar fixed-top navbar-expand-md navbar-dark" style="background-color: #086972;">
+
+    <div class="container-fluid">
+
+      <a class="navbar-brand" href="pricing.html">Blue Taxi Zagreb</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="pricing.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="pricing.html">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#options">Options</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+
+        </ul>
+
+      </div>
+
+    </div>
+
+  </nav>
+
   <!-- Title Section -->
 
   <section id="dalmatiatitle">
 
     <div class="container-fluid">
 
-      <!-- Nav Bar -->
-
-      <nav class="top-bar navbar navbar-expand-lg navbar-dark">
-
-        <a class="navbar-brand" href="">Blue Taxi Zagreb</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="pricing.html">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#options">Options</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">HOME</a>
-            </li>
-          </ul>
-        </div>
-
-      </nav>
-
       <!-- Title -->
 
-      <div class="row">
+      <div class="row top-row">
         <div class="col-lg-6">
-          <h1>DALMATIA @Croatia<br> Safe Transfers <br>with options...</h1>
-          <h2>Stop at Rastoke or Plitvice...<br>On your way to Zadar, Split...</h2>
+          <h1>Transfers @Croatia</h1>
+          <h2>Travel to Zadar, Split & Dubrovnik @Dalmatia,
+            <br>Travel to Paklenica and Krka @Dalmatia,
+            <br>Don't hesitate to contact us...
+          </h2>
         </div>
         <div class="col-lg-6">
           <div class="row justify-content-sm-center justify-content-lg-start">
@@ -96,21 +106,21 @@
           <div class="row justify-content-sm-center justify-content-lg-start">
             <div class="col-gall-2 col-md-5">
               <img class="image" src="images/myPlitvice_.jpg" alt="plitvice-img">
-              <a class="a-desc-2" href="#options">Plitvice Lakes</a>
+              Plitvice Lakes
             </div>
             <div class="col-gall-2 col-md-5">
               <img class="image" src="images/myRastoke_.jpg" alt="rastoke-img">
-              <a class="a-desc-2" href="#options">Rastoke</a>
+              Rastoke
             </div>
           </div>
           <div class="row justify-content-sm-center justify-content-lg-start">
             <div class="col-gall-2 col-md-5">
               <img class="image" src="images/myPaklenica_.jpg" alt="paklenica-img">
-              <a class="a-desc-2" href="#options">Paklenica</a>
+              Paklenica
             </div>
             <div class="col-gall-2 col-md-5">
               <img class="image" src="images/MyKrka_.jpg" alt="krka-img">
-              <a class="a-desc-2" href="#options">Krka</a>
+              Krka
             </div>
           </div>
         </div>
@@ -120,7 +130,7 @@
             the city of Zagreb,
           <p>Time to explore Plitvice Lakes or Rastoke, on your way to
             Zadar, Split or Dubrovnik...
-          <p>Return trips to visit and explore Plitvice Lakes, Rastoke or NP Krka...
+          <p>Return trips to visit and explore Plitvice Lakes or Rastoke...
         </div>
       </div>
 
@@ -195,7 +205,7 @@
 
       <div class="row justify-content-center">
         <div class="col-md-6 col-lg-3">
-          <a href="#"><button type="button" class="btn-bottom-2 btn btn-success"><i class="fa-solid fa-address-card"></i> CONTACT</button></a>
+          <a href="pricing.html"><button type="button" class="btn-bottom-2 btn btn-success"><i class="fa-solid fa-address-card"></i> CONTACT</button></a>
         </div>
         <div class="col-md-6 col-lg-3">
           <a href="pricing.html"><button type="button" class="btn-bottom-2 btn btn-success"><i class="fa-solid fa-euro-sign"></i> PRICING</button></a>
