--- a/index.html
+++ b/index.html
@@ -23,54 +23,62 @@
 
 <body>
 
+  <!-- Navbar Section -->
+
+  <nav class="navbar fixed-top navbar-expand-md navbar-dark" style="background-color: #071A52;">
+
+    <div class="container-fluid">
+
+      <a class="navbar-brand" href="pricing.html">Blue Taxi Zagreb</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="pricing.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="pricing.html">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#zagreb">Zagreb</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="dalmatia.html">Dalmatia</a>
+          </li>
+        </ul>
+
+      </div>
+
+    </div>
+
+  </nav>
+
   <!-- Title Section -->
 
   <section id="hometitle">
 
     <div class="container-fluid">
 
-      <!-- Nav Bar -->
-
-      <nav class="navbar navbar-expand-lg navbar-dark">
-
-        <a class="navbar-brand" href="">Blue Taxi Zagreb</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="pricing.html">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#zagreb">Zagreb</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="dalmatia.html">Dalmatia</a>
-            </li>
-          </ul>
-
-        </div>
-
-      </nav>
-
       <!-- Title -->
 
-      <div class="row">
+      <div class="row top-row">
         <div class="col-lg-6">
-          <h1>ZAGREB @Croatia<br>Safe Transfers <br>with options...</h1>
-          <h2>Explore Zagreb, Plitvice Lakes...<br>Don't hesitate to contact us...</h2>
+          <h1>Transfers @Croatia</h1>
+          <h2>Explore Zagreb, Plitvice Lakes...
+            <br>Travel to your destination...
+            <br>Don't hesitate to contact us...
+          </h2>
+          <h2></h2>
         </div>
         <div class="col-lg-6">
           <div class="row justify-content-sm-center justify-content-lg-start">
             <div class="col-gall-1 col-md-5">
               <img class="image" src="images/myZagreb-Tomislavac_.jpg" alt="zagreb-img">
-              <a class="a-desc-1" href="#zagreb">Zagreb</a>
+              Zagreb
             </div>
             <div class="col-gall-1 col-md-5">
               <img class="image" src="images/MyPula_.jpg" alt="pula-img">
@@ -80,7 +88,7 @@
           <div class="row justify-content-sm-center justify-content-lg-start">
             <div class="col-gall-1 col-md-5">
               <img class="image" src="images/MySplit_.jpg" alt="split-img">
-              <a class="a-desc-1" href="dalmatia.html">Split</a>
+              Split
             </div>
             <div class="col-gall-1 col-md-5">
               <img class="image" src="images/myTrakoscan_.jpg" alt="trakoscan-img">
@@ -98,32 +106,33 @@
           <div class="row justify-content-sm-center justify-content-lg-start">
             <div class="col-gall-1 col-md-5">
               <img class="image" src="images/myPlitvice_.jpg" alt="plitvice-img">
-              <a class="a-desc-1" href="dalmatia.html">Plitvice Lakes</a>
+              Plitvice Lakes
             </div>
             <div class="col-gall-1 col-md-5">
               <img class="image" src="images/myZadar-Donat_.jpg" alt="zadar-img">
-              <a class="a-desc-1" href="dalmatia.html">Zadar</a>
+              Zadar
             </div>
           </div>
           <div class="row justify-content-sm-center justify-content-lg-start">
             <div class="col-gall-1 col-md-5">
               <img class="image" src="images/MyDubrovnik_.jpg" alt="dubrovnik-img">
-              <a class="a-desc-1" href="dalmatia.html">Dubrovnik</a>
+              Dubrovnik
             </div>
             <div class="col-gall-1 col-md-5">
               <img class="image" src="images/myRastoke_.jpg" alt="rastoke-img">
-              <a class="a-desc-1" href="dalmatia.html">Rastoke</a>
+              Rastoke
             </div>
           </div>
         </div>
 
         <div class="col-lg-6">
-          <h2>Enjoy safe transfers from <br>Zagreb, Capital of Croatia...</h2>
+          <h2>Enjoy transfers from Zagreb
+            <br>to Dalmatia, Istria and other regions...
+          </h2>
           <p>Pick-up at the "Franjo Tuđman" airport, or any other spot in
             the city of Zagreb,
-          <p>Time to explore Plitvice Lakes or Rastoke, on way to
-            Zadar, Split or Dubrovnik...
           <p>Transfer to places off the coast, like The Castle of Trakošćan...
+          <p>Transfer to Zadar, Split, Dubrovnik, Pula and other places on the coast...</p>
         </div>
 
       </div>
