Final version with fixed table, font-size for mobile-phone screen size, nav-bar height for mobile screen.

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
       <div class="row justify-content-center">
         <div class="col-md-6 col-lg-3">
-          <a href="#"><button type="button" class="btn-bottom-2 btn btn-success"><i class="fa-solid fa-address-card"></i> CONTACT</button></a>
+          <a href="pricing.html"><button type="button" class="btn-bottom-2 btn btn-success"><i class="fa-solid fa-address-card"></i> CONTACT</button></a>
         </div>
         <div class="col-md-6 col-lg-3">
           <a href="pricing.html"><button type="button" class="btn-bottom-2 btn btn-success"><i class="fa-solid fa-euro-sign"></i> PRICING</button></a>
