--- a/pricing.html
+++ b/pricing.html
@@ -30,26 +30,25 @@
     background-color: #fff;
     color: #071A52;
     font-weight: 600;
-    text-align: center;
   }
 
   th {
     border-bottom: 3px solid;
-    height: 60px;
+    height: 70px;
     width: 10%;
+    vertical-align: middle;
   }
 
   td {
     border-bottom: 1px solid;
-    height: 40px;
-    vertical-align: bottom;
+    height: 35px;
+    vertical-align: middle;
   }
 
   tfoot {
-    border-top: 3px solid;
     font-family: 'Ubuntu', sans-serif;
     font-size: 0.85rem;
-    height: 75px;
+    height: 40px;
   }
 
   form {
@@ -147,14 +146,14 @@ input[type=submit]:hover {
           <table>
             <thead>
               <tr>
-                <th>Destination</th>
+                <th>Return Trips</th>
                 <th>€</td>
                 <th>HRK</td>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td><b>ZG Tour *</b></td>
+                <td><b>Zagreb Tour *</b></td>
                 <td>20 / hr</td>
                 <td>150 / hr</td>
               </tr>
@@ -162,16 +161,6 @@ input[type=submit]:hover {
                 <td><b>Trakošćan</b></td>
                 <td>100</td>
                 <td>750</td>
-              </tr>
-              <tr>
-                <td><b>Rijeka</b></td>
-                <td>200</td>
-                <td>1.500</td>
-              </tr>
-              <tr>
-                <td><b>Pula</b></td>
-                <td>300</td>
-                <td>2.250</td>
               </tr>
               <tr>
                 <td><b>Rastoke **</b></td>
@@ -184,9 +173,37 @@ input[type=submit]:hover {
                 <td>1.650</td>
               </tr>
               <tr>
-                <td><b>Viewpoint @Plitvice ***</b></td>
+                <td><b>Viewpoint @Plitvice</b></td>
                 <td>15</td>
                 <td>115</td>
+              </tr>
+            </tbody>
+            <tfoot>
+              <tr>
+                <td colspan="3">* minimum duration: 2 hrs. /
+                  <br>** 3hrs included on way to Zadar, Šibenik, Split.
+                </td>
+              </tr>
+            </tfoot>
+          </table>
+          <table>
+            <thead>
+              <tr>
+                <th>Destinations</th>
+                <th>€</td>
+                <th>HRK</td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><b>Rijeka</b></td>
+                <td>200</td>
+                <td>1.500</td>
+              </tr>
+              <tr>
+                <td><b>Pula</b></td>
+                <td>300</td>
+                <td>2.250</td>
               </tr>
               <tr>
                 <td><b>Paklenica</b></td>
@@ -224,14 +241,6 @@ input[type=submit]:hover {
                 <td>115 / hr</td>
               </tr>
             </tbody>
-            <tfoot>
-              <tr>
-                <td colspan="3">* For pick-ups at the "Franjo Tuđman" airport, minimum tour duration is 2 hrs.
-                  <br>** 3hrs free of charge to explore on way to Zadar, Šibenik, Split.
-                  <br>*** Visit to Viewpoint charged separately.
-                </td>
-              </tr>
-            </tfoot>
           </table>
         </div>
 
@@ -295,7 +304,7 @@ input[type=submit]:hover {
         <div class="col-lg-6" style="padding-right: 4%;">
           <h2>Here's a few facts About us:</h2>
           <p>We are a joint venture of three small business owners,
-          <p>We are Croatians from the city of Zareb,
+          <p>We are Croatians from the city of Zagreb,
           <p>And we have three VW cars of different sizes, depending on number of passengers and luggage.</p>
         </div>
         <div class="col-lg-6" style="padding-left: 4%;">
