--- a/pricing.html
+++ b/pricing.html
@@ -159,18 +159,18 @@ input[type=submit]:hover {
               </tr>
               <tr>
                 <td><b>Trakošćan</b></td>
-                <td>100</td>
-                <td>750</td>
+                <td>140</td>
+                <td>1050</td>
               </tr>
               <tr>
                 <td><b>Rastoke **</b></td>
-                <td>130</td>
-                <td>975</td>
+                <td>150</td>
+                <td>1125</td>
               </tr>
               <tr>
                 <td><b>Plitvice L. **</b></td>
-                <td>220</td>
-                <td>1.650</td>
+                <td>200</td>
+                <td>1.500</td>
               </tr>
               <tr>
                 <td><b>Viewpoint @Plitvice</b></td>
@@ -180,8 +180,7 @@ input[type=submit]:hover {
             </tbody>
             <tfoot>
               <tr>
-                <td colspan="3">* minimum duration: 2 hrs. /
-                  <br>** 3hrs included on way to Zadar, Šibenik, Split.
+                <td colspan="3">* minimum duration: 2 hrs / ** 3hrs included on way to Zadar, Šibenik, Split / *** charged separately
                 </td>
               </tr>
             </tfoot>
