--- a/dalmatia.html
+++ b/dalmatia.html
@@ -78,21 +78,21 @@
         </div>
         <div class="col-lg-6">
           <div class="row justify-content-sm-center justify-content-lg-start">
-            <div class="col-gall-2 col-md-5">
+            <div class="col-gall-2 col-sm-5">
               <img class="image" src="images/myDalmacija_.jpg" alt="dalmacija-img">
               Dalmatia
             </div>
-            <div class="col-gall-2 col-md-5">
+            <div class="col-gall-2 col-sm-5">
               <img class="image" src="images/myZadar-Donat_.jpg" alt="zadar-img">
               Zadar
             </div>
           </div>
           <div class="row justify-content-sm-center justify-content-lg-start">
-            <div class="col-gall-2 col-md-5">
+            <div class="col-gall-2 col-sm-5">
               <img class="image" src="images/MySplit_.jpg" alt="split-img">
               Split
             </div>
-            <div class="col-gall-2 col-md-5">
+            <div class="col-gall-2 col-sm-5">
               <img class="image" src="images/MyDubrovnik_.jpg" alt="dubrovnik-img">
               Dubrovnik
             </div>
@@ -106,21 +106,21 @@
 
         <div class="col-lg-6">
           <div class="row justify-content-sm-center justify-content-lg-start">
-            <div class="col-gall-2 col-md-5">
+            <div class="col-gall-2 col-sm-5">
               <img class="image" src="images/myPlitvice_.jpg" alt="plitvice-img">
               Plitvice Lakes
             </div>
-            <div class="col-gall-2 col-md-5">
+            <div class="col-gall-2 col-sm-5">
               <img class="image" src="images/myRastoke_.jpg" alt="rastoke-img">
               Rastoke
             </div>
           </div>
           <div class="row justify-content-sm-center justify-content-lg-start">
-            <div class="col-gall-2 col-md-5">
+            <div class="col-gall-2 col-sm-5">
               <img class="image" src="images/myPaklenica_.jpg" alt="paklenica-img">
               Paklenica
             </div>
-            <div class="col-gall-2 col-md-5">
+            <div class="col-gall-2 col-sm-5">
               <img class="image" src="images/MyKrka_.jpg" alt="krka-img">
               Krka
             </div>
@@ -175,19 +175,19 @@
     <div id="intro-carousel" class="carousel slide" data-bs-interval="false">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h4>Plitvice Lakes. 2 hrs away from Zagreb. Most famous destination world wide. Explore on your way to Dalmatia or take a return trip.</h4>
+          <h4>Plitvice Lakes</h4>
           <img class="options-image" src="images/myPlitvice_.jpg" alt="plitvice-img">
         </div>
         <div class="carousel-item">
-          <h4>Rastoke, Slunj. Houses were built as water mills. Only 1.5 hours away from Zagreb. Explore on your way to Dalmatia, or take a return trip.</h4>
+          <h4>Rastoke</h4>
           <img class="options-image" src="images/myRastoke_.jpg" alt="rastoke-img">
         </div>
         <div class="carousel-item">
-          <h4>NP Krka. Similar to Plitvice Lakes. Inside much warmer climate region. Swimming is allowed here! Only 3 hours away from Zagreb.</h4>
+          <h4>NP Krka</h4>
           <img class="options-image" src="images/MyKrka_.jpg" alt="krka-img">
         </div>
         <div class="carousel-item">
-          <h4>NP Paklenica. Combines two climate regions: adriatic & continental. As you climb up, it gets cooler on a hot summer day!</h4>
+          <h4>NP Paklenica</h4>
           <img class="options-image" src="images/myPaklenica_.jpg" alt="paklenica-img">
         </div>
       </div>
