--- a/pricing.html
+++ b/pricing.html
@@ -59,7 +59,7 @@
   }
 
   .col-form {
-    padding: 0 75px;
+    padding: 0 40px;
   }
 
   input[type=submit] {
@@ -78,7 +78,7 @@
     border: 2px solid #17B978;
     border-radius: 4px;
     margin: 10px 0;
-    padding: 10px 20px;
+    padding: 10px 0;
     width: 100%;
   }
 
