--- a/index.html
+++ b/index.html
@@ -78,21 +78,21 @@
         </div>
         <div class="col-lg-6">
           <div class="row justify-content-sm-center justify-content-lg-start">
-            <div class="col-gall-1 col-md-5">
+            <div class="col-gall-1 col-sm-5">
               <img class="image" src="images/myZagreb-Tomislavac_.jpg" alt="zagreb-img">
               Zagreb
             </div>
-            <div class="col-gall-1 col-md-5">
+            <div class="col-gall-1 col-sm-5">
               <img class="image" src="images/MyPula_.jpg" alt="pula-img">
               Pula
             </div>
           </div>
           <div class="row justify-content-sm-center justify-content-lg-start">
-            <div class="col-gall-1 col-md-5">
+            <div class="col-gall-1 col-sm-5">
               <img class="image" src="images/MySplit_.jpg" alt="split-img">
               Split
             </div>
-            <div class="col-gall-1 col-md-5">
+            <div class="col-gall-1 col-sm-5">
               <img class="image" src="images/myTrakoscan_.jpg" alt="trakoscan-img">
               Trakošćan
             </div>
@@ -106,21 +106,21 @@
 
         <div class="col-lg-6">
           <div class="row justify-content-sm-center justify-content-lg-start">
-            <div class="col-gall-1 col-md-5">
+            <div class="col-gall-1 col-sm-5">
               <img class="image" src="images/myPlitvice_.jpg" alt="plitvice-img">
               Plitvice Lakes
             </div>
-            <div class="col-gall-1 col-md-5">
+            <div class="col-gall-1 col-sm-5">
               <img class="image" src="images/myZadar-Donat_.jpg" alt="zadar-img">
               Zadar
             </div>
           </div>
           <div class="row justify-content-sm-center justify-content-lg-start">
-            <div class="col-gall-1 col-md-5">
+            <div class="col-gall-1 col-sm-5">
               <img class="image" src="images/MyDubrovnik_.jpg" alt="dubrovnik-img">
               Dubrovnik
             </div>
-            <div class="col-gall-1 col-md-5">
+            <div class="col-gall-1 col-sm-5">
               <img class="image" src="images/myRastoke_.jpg" alt="rastoke-img">
               Rastoke
             </div>
@@ -180,31 +180,31 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="row justify-content-sm-center justify-content-lg-start">
-            <div class="col-gall-2 col-md-5">
+            <div class="col-gall-2 col-sm-5">
               <img class="image" src="images/myZagreb-Katedrala_.jpg" alt="katedrala-img">
               <div class="desc">Cathedral</div>
             </div>
-            <div class="col-gall-2 col-md-5">
+            <div class="col-gall-2 col-sm-5">
               <img class="image" src="images/myZagreb-Cvjetni_.jpg" alt="cvjetni-img">
               <div class="desc">Flower Square</div>
             </div>
           </div>
           <div class="row justify-content-sm-center justify-content-lg-start">
-            <div class="col-gall-2 col-md-5">
+            <div class="col-gall-2 col-sm-5">
               <img class="image" src="images/myZagreb-Dzamija_.jpg" alt="dzamija-img">
               <div class="desc">"Mosque"</div>
             </div>
-            <div class="col-gall-2 col-md-5">
+            <div class="col-gall-2 col-sm-5">
               <img class="image" src="images/myZagreb-HNK_.jpg" alt="HNK-img">
               <div class="desc">National Theatre</div>
             </div>
           </div>
           <div class="row justify-content-sm-center justify-content-lg-start">
-            <div class="col-gall-2 col-md-5">
+            <div class="col-gall-2 col-sm-5">
               <img class="image" src="images/myZagreb-Sv.Marka_.jpg" alt="sv.marko-img">
               <div class="desc">St.Mark Square</div>
             </div>
-            <div class="col-gall-2 col-md-5">
+            <div class="col-gall-2 col-sm-5">
               <img class="image" src="images/myZagreb-Uspinjaca_.jpg" alt="uspinjaca-img">
               <div class="desc">Cable Car</div>
             </div>
